Fixing layout issues

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -304,8 +304,6 @@ margin-bottom: 5px;
 }
 .ih-item.square{
     border: 4px solid #ccc;
-    min-width: 280px;
-    width: 0px;
     height:inherit;
     margin-bottom: 20px; 
 }
@@ -327,25 +325,14 @@ margin-bottom: 5px;
     padding-top: 30px;
     padding-bottom: 30px;
 }
-ul.footer-menu{
-    padding: 0px;
-}
-.footer-menu li{
-    display: inline-block;
-    padding-right: 10px;
-}
-.footer-menu a{
-   color: #fff;
-}
-.footer-menu a:hover{
-   color: #d56400;
-}
+
 
 .social-icon {
     color: #fff;
 }
 ul.social-icons {
     margin-top: 10px;
+    padding-left: 0;
 }
 .social-icons li {
     vertical-align: top;
@@ -395,4 +382,20 @@ ul.social-icons {
 }
 ul.social-icons{
     margin-top: -10px;
+}
+.fa-github {
+    padding:10px 14px;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+    background-color: #322f30;
+}
+.fa-github:hover{
+    background-color:#4078c0;
+}
+
+.ih-item.square {
+    width: 100%;
 }
